# TrackIt

./: README.md  pyproject.toml  trackit_patterns.yaml
custom_components/trackit/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  imap_client.py  manifest.json  models.py  parser.py  sensor.py  services.yaml  store.py  strings.json
custom_components/trackit/translations/: de.json  en.json
tests/components/trackit/: __init__.py  conftest.py  test_config_flow.py  test_options_flow.py  test_parser.py  test_sensor.py
